[tool.poetry]
name = "fire-state"
version = "0.1.0"
description = ""
authors = ["Mr-Milk <yb97643@um.edu.mo>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Mr-Milk/streamlit-state"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]
exclude = ["demo/**", ".github/**"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
