[project]
name = "fire-state"
authors = [{name = "Mr-Milk", email = "yb97643@um.edu.mo"}]
license = {file = "LICENSE"}
readme = "README.md"
repository = "https://github.com/Mr-Milk/streamlit-state"
dynamic = ["version", "description"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]
requires-python = ">=3.8"
dependencies = ["streamlit"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
